--- a/io/netty/handler/codec/http/router/Router.html
+++ b/io/netty/handler/codec/http/router/Router.html
@@ -122,7 +122,7 @@ extends java.lang.Object</pre>
 
  <pre>
  <code>
- Router&lt;Class&gt; router = new Router&lt;Class&gt;;()
+ Router&lt;Class&gt; router = new Router&lt;Class&gt;();
    .GET      ("/articles",     IndexHandler.class)
    .GET      ("/articles/:id", ShowHandler.class)
    .POST     ("/articles",     CreateHandler.class)
