--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <body>
   <p>netty-router API</p>
   <ul>
-    <li><a hre="api-2.1.0/">2.1.0 and below</a><li>
-    <li><a hre="api-2.2.0/">2.2.0</a><li>
+    <li><a href="api/2.1.0/">2.1.0 and below</a></li>
+    <li><a href="api/2.2.0/">2.2.0</a></li>
   </ul>
 </body>
 </html>
